--- a/inkshtml.html
+++ b/inkshtml.html
@@ -33,23 +33,23 @@
  <script src='https://threejs.org/examples/js/libs/stats.min.js'></script>
 
 
-  <link rel="stylesheet" href="styles/inkstyle.css">
-  <link rel="stylesheet" href="styles/inksnav.css">
-  <link rel="stylesheet" href="styles/inkstime.css">
-  <link rel="stylesheet" href="styles/inkscontainer1.css">
-  <link rel="stylesheet" href="styles/inkscontainer2.css">
-  <link rel="stylesheet" href="styles/inkscontainer3.css">
-  <link rel="stylesheet" href="styles/inksreserve.css">
-  <link rel="stylesheet" href="styles/inksparticle.css">
-  <link rel="stylesheet" href="styles/inksform.css">
-  <link rel="stylesheet" href="styles/inkscontact.css">
-  <link rel="stylesheet" href="styles/inksteam.css">
-  <link rel="stylesheet" href="styles/inksblockchain.css">
+  <link rel="stylesheet" href="inkstyle.css">
+  <link rel="stylesheet" href="inksnav.css">
+  <link rel="stylesheet" href="inkstime.css">
+  <link rel="stylesheet" href="inkscontainer1.css">
+  <link rel="stylesheet" href="inkscontainer2.css">
+  <link rel="stylesheet" href="inkscontainer3.css">
+  <link rel="stylesheet" href="inksreserve.css">
+  <link rel="stylesheet" href="inksparticle.css">
+  <link rel="stylesheet" href="inksform.css">
+  <link rel="stylesheet" href="inkscontact.css">
+  <link rel="stylesheet" href="inksteam.css">
+  <link rel="stylesheet" href="inksblockchain.css">
 
 
-  <script src="scripts/inkscripts.js"></script>
-   <script src="scripts/inkscripts.js"></script>
-   <script src="scripts/inkstimes.js"></script>
+  <script src="inkscripts.js"></script>
+   <script src="inkscripts.js"></script>
+   <script src="inkstimes.js"></script>
   
    
         <title>inksnation one global family</title>
@@ -193,7 +193,7 @@
 
 <!-- scripts -->
 
-<script src="mypat/js/app.js"></script>
+<script src="app.js"></script>
 
 <!-- desktop page container -->
 
