--- a/inks.html
+++ b/inks.html
@@ -33,18 +33,18 @@
  <script src='https://threejs.org/examples/js/libs/stats.min.js'></script>
 
 
-  <link rel="stylesheet" href="styles/inkstyle.css">
-  <link rel="stylesheet" href="styles/inksnav.css">
-  <link rel="stylesheet" href="styles/inkstime.css">
-  <link rel="stylesheet" href="styles/inkscontainer1.css">
-  <link rel="stylesheet" href="styles/inkscontainer2.css">
-  <link rel="stylesheet" href="styles/inkscontainer3.css">
-  <link rel="stylesheet" href="styles/inksreserve.css">
-  <link rel="stylesheet" href="styles/inksparticle.css">
-  <link rel="stylesheet" href="styles/inksform.css">
-  <link rel="stylesheet" href="styles/inkscontact.css">
-  <link rel="stylesheet" href="styles/inksteam.css">
-  <link rel="stylesheet" href="styles/inksblockchain.css">
+  <link rel="stylesheet" href="inkstyle.css">
+  <link rel="stylesheet" href="inksnav.css">
+  <link rel="stylesheet" href="inkstime.css">
+  <link rel="stylesheet" href="inkscontainer1.css">
+  <link rel="stylesheet" href="inkscontainer2.css">
+  <link rel="stylesheet" href="inkscontainer3.css">
+  <link rel="stylesheet" href="inksreserve.css">
+  <link rel="stylesheet" href="inksparticle.css">
+  <link rel="stylesheet" href="inksform.css">
+  <link rel="stylesheet" href="inkscontact.css">
+  <link rel="stylesheet" href="inksteam.css">
+  <link rel="stylesheet" href="inksblockchain.css">
 
 
   <script src="scripts/inkscripts.js"></script>
